# nonstdio

./: Makefile.am  cat.c  configure.ac  nonstdio.c  nonstdio.h
